--- a/Thesis.tex
+++ b/Thesis.tex
@@ -12,7 +12,8 @@
 \usepackage{xr-hyper}
 \usepackage{hyperref}
 \usepackage{float}
-\usepackage{array} 
+\usepackage{array}
+\usepackage{multirow} 
 %\usepackage[nottoc,numbib]{tocbibind}
 
 \hypersetup{urlcolor=black, colorlinks=true} % Colors hyperlinks in blue - change to black if annoying
@@ -155,10 +156,9 @@ As a conclusion chapter \ref{Chapter8} closes this report with some critical ref
 \lhead{\emph{Abbreviations}} % Set the left side page header to "Abbreviations"
 \listofsymbols{ll} % Include a list of Abbreviations (a table of two columns)
 {
-\textbf{ALU} & \textbf{A}rithmetic \textbf{L}ogic \textbf{U}nit \\
-\textbf{ASIC} & \textbf{A}pplication \textbf{S}pecific \textbf{I}integrated \textbf{C}ircuit \\
+\textbf{RTC} & \textbf{R}eal \textbf{T}ime \textbf{C}lock \\
 \textbf{CPU} & \textbf{C}entral \textbf{P}rocessing \textbf{U}nit \\
-\textbf{DAG} & \textbf{D}ata \textbf{A}ddress \textbf{G}enerator \\
+
 }
 
 %----------------------------------------------------------------------------------------
@@ -213,12 +213,12 @@ As a conclusion chapter \ref{Chapter8} closes this report with some critical ref
 
 \input{./Chapters/Chapter1}
 \input{./Chapters/Chapter2} 
-%\input{./Chapters/Chapter3}
-%\input{./Chapters/Chapter4} 
-%\input{./Chapters/Chapter5} 
-%\input{./Chapters/Chapter6} 
-%\input{./Chapters/Chapter7} 
-%\input{./Chapters/Chapter8} 
+\input{./Chapters/Chapter3}
+\input{./Chapters/Chapter4} 
+\input{./Chapters/Chapter5} 
+\input{./Chapters/Chapter6} 
+\input{./Chapters/Chapter7} 
+\input{./Chapters/Chapter8} 
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
