--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -3,90 +3,12 @@
       ORGANIZATION = "Analog Devices, Inc.",
 		EDITION = "A"
 }
-@MANUAL{ID2,
-		TITLE = "ADSP-21369 EZ-KIT Lite Evaluation System Manual",
-		ORGANIZATION = "Analog Devices, Inc.",
-		EDITION = "2.2",
-		MONTH = "September",
-		YEAR = "2009"
-}
-@MANUAL{ID3,
-		TITLE = "ADM3202/ADM3222/ADM1385 Data Sheet",
-		NOTE = "Line Drivers/Receivers",
-		ORGANIZATION = "Analog Devices, Inc."
-}
-@MANUAL{ID4,
-		TITLE = "Using the UART Port Controller on SHARC® Processors",
-		EDITION = "EE-296",
-		ORGANIZATION = "Analog Devices, Inc.",
-}
-@MANUAL{ID5,
-		TITLE = "Determining Clock Accuracy Requirements for UART Communications",
-		ORGANIZATION = "Maxim, Inc.",
-}
-
-@MANUAL{ID14,
-		TITLE = "AD1835A Data Sheet",
-		ORGANIZATION = "Analog Devices, Inc.",
-		EDITION = "A",
-		YEAR = "2003"
-}
-
-@MANUAL{ID15,
-		TITLE = "ADSP-2136(7/8/9) SHARC® Processor Hardware Reference",
-		ORGANIZATION = "Analog Devices, Inc.",
-		EDITION = "1.0",
-		MONTH = "August",
-		YEAR = "2006"
-}
-
-@MANUAL{ID16,
-		TITLE = "Using the Expert DAI for SHARC® Processors",
-		EDITION = "EE-243",
-		ORGANIZATION = "Analog Devices, Inc.",
-		YEAR = "2010",
-		MONTH = "June"
-}
-
-@BOOK{ID6,
-		TITLE = "The LabVIEW Style Book",
-		AUTHOR = "Peter A.Blume",
-		PUBLISHER = "Prentice Hall",
-		EDITION = "1",
-		YEAR = "2007",
-		MONTH = "March"
-
-}
-@BOOK{ID7,
-		TITLE = "LabVIEW for Engineers",
-		AUTHOR = "Ronald W. Larsen",
-		PUBLISHER = "Prentice Hall",
-		EDITION = "1",
-		YEAR = "2010",
-		MONTH = "February"
-}
-@BOOK{ID8,
-		TITLE = "Digital Signal Processing Using MATLAB",
-		AUTHOR = "John G. Proakis and  Vinay K. Ingle",
-		PUBLISHER = "Global Engineering: Christopher M. Shortt",
-		EDITION = "3",
-		YEAR = "2006",
-		MONTH = "August"
-}
-
-@BOOK{ID9,
-		TITLE = "FM Theory and Applications",
-		AUTHOR = "John Chowning and David Bristow",
-		PUBLISHER = "Yamaha Music Foundation",
-		EDITION = "3",
-		YEAR = "1986",
-		ADDRESS = "Shimomeguro Meguroku, Tokyo, Japan"
-}
 
 @MISC{ID10,
-		TITLE = "How to make and play sound with Matlab",
-		AUTHOR = "K. Fujimoto",
-		NOTE = "http://www.h6.dion.ne.jp/~fff/old/technique/auditory/matlab.html"
+		TITLE = "Elevating Self-discharge",
+		AUTHOR = "Isidor Buchmann",
+		YEAR = "2013",
+		NOTE = "http://www.http://batteryuniversity.com/learn/article/elevating_self_discharge/"
 }
 @MISC{ID11,
 		TITLE = "Making a Studio Pt.3",
