--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,7 +1,9 @@
 @MANUAL{ID1,
-      TITLE = "ADSP-21367/ADSP-21368/ADSP-21369 SHARC Processor Data Sheet",
-      ORGANIZATION = "Analog Devices, Inc.",
-		EDITION = "A"
+      TITLE = "Waspmote Technical Guide",
+      ORGANIZATION = "Libelium",
+	  EDITION = "3.4",
+	  YEAR = "2012",
+	  MONTH = "November",
 }
 
 @MISC{ID10,
@@ -11,23 +13,22 @@
 		NOTE = "http://www.http://batteryuniversity.com/learn/article/elevating_self_discharge/"
 }
 @MISC{ID11,
-		TITLE = "Making a Studio Pt.3",
-		AUTHOR = "J. Thomas",
-		NOTE = "http://en.audiofanzine.com/homestudio/editorial/articles/making-a-studio-pt3.html",
-		MONTH = "May",
-		YEAR = "2009"
+		TITLE = "Xbee Shield",
+		AUTHOR = "Arduino Team",
+		NOTE = "http://arduino.cc/en/Main/ArduinoXbeeShield",
 }
 
 @MISC{ID12,
-		TITLE = "Pitches, in hertz, produced by a keyboard instrument with 88 digitals, tuned to equal temperament",
-		AUTHOR = "T. Zuckerman",
-		NOTE = "http://shakahara.com/pianopitch2.php"
+		TITLE = "Wireless Sensor Networks Open Source Platform",
+		AUTHOR = "Cooking Hacks by Libelium Comunicaciones Distribuidas S.L.",
+		NOTE = "http://www.cooking-hacks.com/index.php/documentation/tutorials/waspmote"
 }
 
 @MISC{ID13,
-		TITLE = "Coursebook on Digital Signal Processing",
-		AUTHOR = "Koen Eneman",
-		YEAR = "2011-2012"
+		TITLE = "Libelium Launches New Generation of Waspmote Sensor Nodes",
+		AUTHOR = "Wireless Sensor Networks Research Group",
+		YEAR = "2013",
+		MONTH = "April"
 }
 
 @MISC{ID17,
