--- a/Thesis.tex
+++ b/Thesis.tex
@@ -156,8 +156,15 @@ As a conclusion chapter \ref{Chapter8} closes this report with some critical ref
 \lhead{\emph{Abbreviations}} % Set the left side page header to "Abbreviations"
 \listofsymbols{ll} % Include a list of Abbreviations (a table of two columns)
 {
-\textbf{RTC} & \textbf{R}eal \textbf{T}ime \textbf{C}lock \\
+\textbf{API} & \textbf{A}pplication \textbf{P}rogramming \textbf{I}nterface \\
 \textbf{CPU} & \textbf{C}entral \textbf{P}rocessing \textbf{U}nit \\
+\textbf{DRAM} & \textbf{D}ynamic \textbf{R}andom \textbf{A}ccess \textbf{M}emory \\
+\textbf{EEPROM} & \textbf{E}lectrically \textbf{E}rasable \textbf{P}rogrammable \textbf{R}ead \textbf{O}nly \textbf{M}emory \\
+\textbf{PCB} & \textbf{P}rinted \textbf{C}ircuit \textbf{B}oard \\
+\textbf{RTC} & \textbf{R}eal \textbf{T}ime \textbf{C}lock \\
+\textbf{SD} & \textbf{S}ecure \textbf{D}igital \\
+\textbf{SRAM} & \textbf{S}tatic \textbf{R}andom \textbf{A}ccess \textbf{M}emory \\
+\textbf{WSN} & \textbf{W}ireless \textbf{S}ensor \textbf{N}etwork \\
 
 }
 
