CH1, CH3, update CH4, Biblio wit unstable bibtex

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -14,7 +14,7 @@
 \usepackage{float}
 \usepackage{array}
 \usepackage{multirow} 
-%\usepackage[nottoc,numbib]{tocbibind}
+\usepackage[nottoc,numbib]{tocbibind}
 
 \hypersetup{urlcolor=black, colorlinks=true} % Colors hyperlinks in blue - change to black if annoying
 \title{\ttitle} % Defines the thesis title - don't touch this
@@ -157,13 +157,24 @@ As a conclusion chapter \ref{Chapter8} closes this report with some critical ref
 \listofsymbols{ll} % Include a list of Abbreviations (a table of two columns)
 {
 \textbf{API} & \textbf{A}pplication \textbf{P}rogramming \textbf{I}nterface \\
+\textbf{AVR} & \textbf{A}lf \textbf{V}egard \textbf{R}ISC \\
 \textbf{CPU} & \textbf{C}entral \textbf{P}rocessing \textbf{U}nit \\
+\textbf{DARPA} & \textbf{D}efense \textbf{A}dvanced \textbf{R}esearch \textbf{P}rojects \textbf{A}gency \\
 \textbf{DRAM} & \textbf{D}ynamic \textbf{R}andom \textbf{A}ccess \textbf{M}emory \\
+\textbf{DSN} & \textbf{D}istributed \textbf{S}ensor \textbf{N}etwork \\
 \textbf{EEPROM} & \textbf{E}lectrically \textbf{E}rasable \textbf{P}rogrammable \textbf{R}ead \textbf{O}nly \textbf{M}emory \\
+\textbf{ENIAC} & \textbf{E}lectronic \textbf{N}umerical \textbf{I}ntegrator \textbf{A}nd \textbf{C}omputer \\
+\textbf{IDE} & \textbf{I}ntegrated \textbf{D}evelopment \textbf{E}nvironment \\
+\textbf{IOT} & \textbf{I}nternet \textbf{O}f \textbf{T}hings.\\
+\textbf{OEM} & \textbf{O}riginal \textbf{E}quipment \textbf{M}anufacturer \\
+\textbf{PAN} & \textbf{P}ersonal \textbf{A}rea \textbf{N}etwork \\
 \textbf{PCB} & \textbf{P}rinted \textbf{C}ircuit \textbf{B}oard \\
+\textbf{RFID} & \textbf{R}adio \textbf{F}requency \textbf{ID}entification\\
+\textbf{RISC} & \textbf{R}educed \textbf{I}nstruction \textbf{S}et \textbf{C}omputing \\
 \textbf{RTC} & \textbf{R}eal \textbf{T}ime \textbf{C}lock \\
 \textbf{SD} & \textbf{S}ecure \textbf{D}igital \\
 \textbf{SRAM} & \textbf{S}tatic \textbf{R}andom \textbf{A}ccess \textbf{M}emory \\
+\textbf{UPC} & \textbf{U}niversal \textbf{P}roduct \textbf{C}ode\\
 \textbf{WSN} & \textbf{W}ireless \textbf{S}ensor \textbf{N}etwork \\
 
 }
@@ -235,7 +246,7 @@ As a conclusion chapter \ref{Chapter8} closes this report with some critical ref
 
 \lhead{\emph{Bibliography}} % Change the page header to say "Bibliography"
 
-\bibliographystyle{ieeetr} % Use the "unsrtnat" BibTeX style for formatting the Bibliography
+\bibliographystyle{plain} %ieeetr} % Use the "unsrtnat" BibTeX style for formatting the Bibliography
 
 \addtocontents{toc}{\vspace{2em}}
 %\clearpage
