--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,97 +1,182 @@
 @MANUAL{ID1,
       TITLE = "Waspmote Technical Guide",
-      ORGANIZATION = "Libelium",
+      ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
 	  EDITION = "3.4",
 	  YEAR = "2012",
-	  MONTH = "November",
+	  MONTH = "November"
 }
 
-@MISC{ID10,
-		TITLE = "Elevating Self-discharge",
-		AUTHOR = "Isidor Buchmann",
-		YEAR = "2013",
-		NOTE = "http://www.http://batteryuniversity.com/learn/article/elevating_self_discharge/"
-}
-@MISC{ID11,
-		TITLE = "Xbee Shield",
-		AUTHOR = "Arduino Team",
-		NOTE = "http://arduino.cc/en/Main/ArduinoXbeeShield",
+@MANUAL{ID2,
+      TITLE = "Waspmote Datasheet",
+      ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
+	  EDITION = "2.3",
+	  YEAR = "2012",
+	  MONTH = "November"
 }
 
-@MISC{ID12,
-		TITLE = "Wireless Sensor Networks Open Source Platform",
-		AUTHOR = "Cooking Hacks by Libelium Comunicaciones Distribuidas S.L.",
-		NOTE = "http://www.cooking-hacks.com/index.php/documentation/tutorials/waspmote"
+@MANUAL{ID3,
+      TITLE = "Agriculture 2.0 Technical Guide",
+      ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
+	  EDITION = "2-0.3",
+	  YEAR = "2012",
+	  MONTH = "November"
 }
 
-@MISC{ID13,
-		TITLE = "Libelium Launches New Generation of Waspmote Sensor Nodes",
-		AUTHOR = "Wireless Sensor Networks Research Group",
-		YEAR = "2013",
-		MONTH = "April"
+@MANUAL{ID4,
+      TITLE = "Gases 2.0 Technical Guide",
+      ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
+	  EDITION = "2-0.2",
+	  YEAR = "2012",
+	  MONTH = "November"
+}
+
+@MANUAL{ID5,
+      TITLE = "Catalogue Wireless Sensor Networks 2013",
+      ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
+	  EDITION = "4.2",
+	  YEAR = "2013",
+	  MONTH = "February"
+}
+
+@MANUAL{ID6,
+      TITLE = "Sensor Compatibility",
+      ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
+	  EDITION = "0.5",
+	  YEAR = "2013",
+	  MONTH = "January"
+}
+
+@MANUAL{ID7,
+      TITLE = "Waspmote Power Programming Guide",
+      ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
+	  EDITION = "0.6",
+	  YEAR = "2012",
+	  MONTH = "July"
+}
+
+@MANUAL{ID8,
+      TITLE = "Waspmote RTC Programming Guide",
+      ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
+	  EDITION = "0.4",
+	  YEAR = "2012",
+	  MONTH = "June"
+}
+
+@MANUAL{ID9,
+      TITLE = "Waspmote Utilities Programming Guide",
+      ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
+	  EDITION = "0.2",
+	  YEAR = "2012",
+	  MONTH = "June"
+}
+
+@MANUAL{ID10,
+      TITLE = "Waspmote ZigBee Networking Guide",
+      ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
+	  EDITION = "1.0",
+	  YEAR = "2012",
+	  MONTH = "November"
+}
+
+@MANUAL{ID11,
+      TITLE = "Waspmote Interruptions Programming Guide",
+      ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
+	  EDITION = "0.2",
+	  YEAR = "2012",
+	  MONTH = "June"
+}
+
+@MANUAL{ID12,
+      TITLE = "8-bit Atmel Microcontroller with 64K-128K-256K Bytes In-System Programmable Flash",
+      ORGANIZATION = "Atmel",
+	  YEAR = "2012",
+	  MONTH = "October"
+}
+
+@MANUAL{ID13,
+      TITLE = "XBee XBee-PRO ZB RF Modules",
+      ORGANIZATION = "Digi International Inc.",
+	  EDITION = "90000976L",
+	  YEAR = "2012",
+	  MONTH = "April"
+}
+
+@MANUAL{ID14,
+      TITLE = "X-CTU Configuration \& Test Utility Software",
+      ORGANIZATION = "Digi International Inc.",
+	  EDITION = "90001003A",
+	  YEAR = "2008",
+	  MONTH = "August"
+}
+
+@BOOK{ID15,
+	TITLE = "Building Wireless Sensor Networks",
+	AUTHOR = "Robert Faludi",
+	PUBLISHER = "O'Reilly Media Inc.",
+	YEAR = "2011",
+	EDITION = "First"
+}
+
+@ARTICLE{ID16,
+	TITLE = "50 Sensor applications for a Smarter World. Get Inspired!",
+	AUTHOR = "Libelium",
+	NOTE = "\url{http://www.libelium.com/50_sensor_applications/}",
+ 	MONTH = "May",
+	YEAR = "2012"
 }
 
 @MISC{ID17,
-		TITLE = "Synth Secrets, Part 10: Modulation",
-		AUTHOR = "Gordon Read",
-		YEAR = "2000",
-		MONTH = "February",
-		NOTE = "http://www.soundonsound.com/sos/feb00/articles/synthsecrets.htm"
-}
-
-@MISC{ID19,
-		TITLE = "Synth Secrets, Part 12: An introduction to Frequency Modulation",
-		AUTHOR = "Gordon Read",
-		YEAR = "2000",
-		MONTH = "April",
-		NOTE = "http://www.soundonsound.com/sos/apr00/articles/synthsecrets.htm"
+		TITLE = "Xbee Shield",
+		AUTHOR = "Arduino Team",
+		NOTE = "\url{http://arduino.cc/en/Main/ArduinoXbeeShield/}",
 }
 
 @MISC{ID18,
-		TITLE = "Synth Secrets, Part 13: More on Frequency Modulation",
-		AUTHOR = "Gordon Read",
-		YEAR = "2000",
-		MONTH = "May",
-		NOTE = "http://www.soundonsound.com/sos/may00/articles/synth.htm"
+		TITLE = "Wireless Sensor Networks Open Source Platform",
+		AUTHOR = "Cooking Hacks by Libelium Comunicaciones Distribuidas S.L.",
+		NOTE = "\url{http://www.cooking-hacks.com/index.php/documentation/tutorials/waspmote/}",
 }
 
-@MISC{ID20,
-		TITLE = "Digital Signal Processing 101- An Introductory Course in DSP System Design",
-		AUTHOR = "Analog Devices Inc.",
-		NOTE = "http://www.analog.com/en/processors-dsp/processors/beginners\_guide\_to\_dsp/fca.html"
+@ARTICLE{ID19,
+		TITLE = "Libelium Launches New Generation of Waspmote Sensor Nodes",
+		AUTHOR = "Wireless Sensor Networks Research Group",
+		YEAR = "2013",
+		MONTH = "April",
+		NOTE = "\url{http://www.sensor-networks.org/index.php?page=1309909904/}"
+}
+
+
+@MANUAL{ID20,
+	AUTHOR = "Cristina Alcaraz and Pablo Najera and Javier Lopez and Rodrigo Roman",
+	TITLE = "Wireless Sensor Networks and The Internet of Things: Do We Need a Complete Integration?",
+	ORGANIZATION = "Computer Science Department University of Malaga, Spain",
+	YEAR = "2010"
 }
 
 @MISC{ID21,
-		TITLE = "Fourier Series - Sawtooth Wave",
-		AUTHOR = "Weisstein, Erik W.",
-		PUBLISHER = "MathWorld - A Wolfram Web Resource",
-		NOTE = "http://mathworld.wolfram.com/FourierSeriesSawtoothWave.html"
+		TITLE = "Elevating Self-discharge",
+		AUTHOR = "Isidor Buchmann",
+		YEAR = "2013",
+		NOTE = "\url{http://batteryuniversity.com/learn/article/elevating_self_discharge/}"
 }
 
 @MISC{ID22,
-		TITLE = "Fourier Series - Square Wave",
-		AUTHOR = "Weisstein, Erik W.",
-		PUBLISHER = "MathWorld - A Wolfram Web Resource",
-		NOTE = "http://mathworld.wolfram.com/FourierSeriesSawtoothWave.html"
+		TITLE = "Wireless Sensor Networks",
+		AUTHOR = "Sebastian Buttrich",
+		YEAR = "2010",
+		NOTE = "Course Lecture SPVC2010"
 }
 
-@MISC{ID23,
-		TITLE = "Fourier Series - Triangle Wave",
-		AUTHOR = "Weisstein, Erik W.",
-		PUBLISHER = "MathWorld - A Wolfram Web Resource",
-		NOTE = "http://mathworld.wolfram.com/FourierSeriesSawtoothWave.html"
+@BOOK{ID23,
+	TITLE = "Creating the Computer",
+	AUTHOR = "Kenneth Flamm",
+	PUBLISHER = "The Brookings Institution",
+	YEAR = "1988",
 }
 
-@MISC{ID24,
-		TITLE = "Bessel Function of the First Kind",
-		AUTHOR = "Weisstein, Erik W.",
-		PUBLISHER = "MathWorld - A Wolfram Web Resource",
-		NOTE = "http://mathworld.wolfram.com/BesselFunctionoftheFirstKind.html"
-}
-
-@BOOK{ID25,
-		TITLE = "Music and Computers: A Theoretical and Historical Approach",
-		AUTHOR = "Phil Burk and Larry Polansky and Douglas Repetto and Mary Roberts and Dan Rockmore",
-		PUBLISHER = "Key College Publishing",
-		NOTE = "http://music.columbia.edu/cmc/MusicAndComputers/"
+@MANUAL{ID24,
+	AUTHOR = "John A. Stankovic",
+	TITLE = "Wireless Sensor Networks",
+	ORGANIZATION = "University of Virginia, Department of Computer Science",
+	YEAR = "2006"
 }
