--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,3 +1,32 @@
+@MANUAL{PRO,
+      TITLE = "Waspmote (v1.1) vs Waspmote PRO (v1.2)",
+      ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
+	  EDITION = "4.0",
+	  YEAR = "2013",
+	  MONTH = "February"
+}
+
+@MANUAL{ATMEGA,
+      TITLE = "8-bit Atmel Microcontroller with 64K/128K/256K Bytes In-System Programmable Flash",
+      ORGANIZATION = "Atmel",
+	  EDITION = "2549P",
+	  YEAR = "2012"
+}
+
+@MANUAL{AVR,
+      TITLE = "AVR-libc",
+	  EDITION = "1.6.4",
+	  YEAR = "2008"
+}
+
+@ARTICLE{LION,
+	TITLE = "Elevating Self-discharge",
+	AUTHOR = "Isodor Buchmann",
+	JOURNAL = "Battery University",
+	NOTE = "\url{http://batteryuniversity.com/learn/article/elevating_self_discharge}",
+	YEAR = "2013"
+}
+
 @MANUAL{ID1,
       TITLE = "Waspmote Technical Guide",
       ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
@@ -70,7 +99,7 @@
 	  MONTH = "June"
 }
 
-@MANUAL{ID10,
+@MANUAL{ZBGUIDE,
       TITLE = "Waspmote ZigBee Networking Guide",
       ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
 	  EDITION = "1.0",
@@ -93,7 +122,7 @@
 	  MONTH = "October"
 }
 
-@MANUAL{ID13,
+@MANUAL{XBEE,
       TITLE = "XBee XBee-PRO ZB RF Modules",
       ORGANIZATION = "Digi International Inc.",
 	  EDITION = "90000976L",
@@ -125,28 +154,38 @@
 	YEAR = "2012"
 }
 
-@MISC{ID17,
+@MISC{SHIELD,
 		TITLE = "Xbee Shield",
 		AUTHOR = "Arduino Team",
+		YEAR = "2012",
+		MONTH = "February",
 		NOTE = "\url{http://arduino.cc/en/Main/ArduinoXbeeShield/}",
 }
 
-@MISC{ID18,
+@MISC{SQUID,
+	TITLE = "SquidBee Main Page",
+	AUTHOR = "Libelium Comuniaciones Distribuidas S.L.",
+	NOTE = "\url{http://www.libelium.com/squidbee/index.php?title=Main_Page}"
+}
+
+@ARTICLE{CH,
 		TITLE = "Wireless Sensor Networks Open Source Platform",
-		AUTHOR = "Cooking Hacks by Libelium Comunicaciones Distribuidas S.L.",
+		AUTHOR = "Cooking Hacks",
+		YEAR = "2013",
+		MONTH = "February",
 		NOTE = "\url{http://www.cooking-hacks.com/index.php/documentation/tutorials/waspmote/}",
 }
 
-@ARTICLE{ID19,
+@ARTICLE{NEW,
 		TITLE = "Libelium Launches New Generation of Waspmote Sensor Nodes",
-		AUTHOR = "Wireless Sensor Networks Research Group",
+		AUTHOR = "WSN Research Group",
 		YEAR = "2013",
 		MONTH = "April",
-		NOTE = "\url{http://www.sensor-networks.org/index.php?page=1309909904/}"
+		NOTE = "\url{http://www.sensor-networks.org/index.php?page=1309909904}"
 }
 
 
-@MANUAL{ID20,
+@MANUAL{ALCA,
 	AUTHOR = "Cristina Alcaraz and Pablo Najera and Javier Lopez and Rodrigo Roman",
 	TITLE = "Wireless Sensor Networks and The Internet of Things: Do We Need a Complete Integration?",
 	ORGANIZATION = "Computer Science Department University of Malaga, Spain",
@@ -160,14 +199,14 @@
 		NOTE = "\url{http://batteryuniversity.com/learn/article/elevating_self_discharge/}"
 }
 
-@MISC{ID22,
+@MISC{SEBA,
 		TITLE = "Wireless Sensor Networks",
 		AUTHOR = "Sebastian Buttrich",
 		YEAR = "2010",
 		NOTE = "Course Lecture SPVC2010"
 }
 
-@BOOK{ID23,
+@BOOK{FLAMM,
 	TITLE = "Creating the Computer",
 	AUTHOR = "Kenneth Flamm",
 	PUBLISHER = "The Brookings Institution",
@@ -180,3 +219,67 @@
 	ORGANIZATION = "University of Virginia, Department of Computer Science",
 	YEAR = "2006"
 }
+
+@ARTICLE{ATLANTIC,
+		TITLE = "The Second Wave of Wireless Communications: A Game Changer for Global Development?",
+		AUTHOR = "Patrick deGategno and Banning Garret",
+		YEAR = "2010",
+		MONTH = "October",
+		JOURNAL = "Atlantic Council\/National Intelligence Council"
+}
+
+@BOOK{DAR,
+	TITLE = "Wireless Sensor Networks: Application - Centric Design",
+	AUTHOR = "Ilangko Balansingham and Qinqhua Wang",
+	PUBLISHER = "Yen Kheng Tan",
+	YEAR = "2010",
+	NOTE = "Available from: \url{http://www.intechopen.com/books/wireless-sensor-networks-application-centric-design/wireless-sensor-networks-an-introduction}"
+}
+
+@ARTICLE{DARWIKI,
+		TITLE = "DARPA",
+		AUTHOR = "Wikipedia",
+		YEAR = "2013",
+		MONTH = "April",
+}
+
+@ARTICLE{AUTO,
+		TITLE = "Auto-ID Labs",
+		AUTHOR = "Wikipedia",
+		YEAR = "2013",
+		MONTH = "March",
+}
+
+@ARTICLE{CHINA,
+		TITLE = "WSN in China",
+		AUTHOR = "Marco Zennaro",
+		YEAR = "2008",
+		MONTH = "January",
+		JOURNAL = "Wireless Sensor Networks Blog"
+}
+
+@BOOK{ZBWSN,
+	TITLE = "ZigBee Wirlesss Networks and Transceivers",
+	AUTHOR = "Sahan Farahani",
+	PUBLISHER = "Elsevier",
+	YEAR = "2008",
+}
+
+@MANUAL{NIWSN,
+	AUTHOR = "Robert Berger",
+	TITLE = "Introduction to Wireless Sensor Networks",
+	ORGANIZATION = "NI Technical Symposium",
+	YEAR = "2009",
+}
+
+@MANUAL{KTH,
+	AUTHOR = "Carlo Fischione",
+	TITLE = "An Introduction to Wireless Sensor Networks",
+	ORGANIZATION = "KTH Royal Institute of Technology",
+	YEAR = "2011",
+	MONTH = "November"
+}
+
+
+
+
