--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -1,6 +1,15 @@
 % Appendix A
 \section{XBee join and send time experiments} % Main appendix title
 \label{AppendixA} 
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.48\textwidth]{stack}
+%\rule{30em}{0.5pt}
+\caption{ZigBee Protocol Layers}
+\label{fig:stack}
+\end{figure} 
+
 \subsection{Distance relation test}
 This table contains the results of two different test programs (blue and green values). The program scenario is as follows:\\
 \begin{enumerate}
