--- a/Appendices/AppendixF.tex
+++ b/Appendices/AppendixF.tex
@@ -9,7 +9,9 @@
 \caption{API Frame Names and Values (see \ref{api1})}
 \label{fig:api3 }
 \end{figure}
-
+\clearpage
+\pagebreak
+%------------------------------------
 \subsection{ZigBee Transmit Request}
 \begin{figure}[htbp]
 \centering
@@ -17,7 +19,9 @@
 \caption{ZigBee Transmit Request Frame Structure (see \ref{api1})}
 \label{fig:api4}
 \end{figure}
-
+\clearpage
+\pagebreak
+%------------------------------------
 \subsection{ZigBee Receive Packet}
 \begin{figure}[htbp]
 \centering
@@ -25,19 +29,24 @@
 \caption{ZigBee Transmit Request Frame Structure (see \ref{api1})}
 \label{fig:api5}
 \end{figure}
-
-\subsection{Waspmote Application Header in ZigBee API Frame Structure }
+\clearpage
+\pagebreak
+%------------------------------------
+\subsection{Waspmote Application Header in ZigBee API Frame Structure}
 \begin{figure}[htbp]
 \centering
-\includegraphics[height=16cm]{frames}
-\caption{API Frame Structure (see \ref{})}
+\includegraphics[height=10cm]{frames}
+\caption{Waspmote Application Header in ZigBee API Frame Structure (see \ref{frames1})}
 \label{fig:frames}
 \end{figure}
-
-\subsection{Waspmote Application Header in ZigBee API Frame Structure }
+\clearpage
+\pagebreak
+%------------------------------------
+\subsection{IO API Data Frames for Waspmote and Gateway}
+\label{OwnProtocolLabel}
 \begin{figure}[htbp]
 \centering
 \includegraphics[height=10cm]{temp}
-\caption{API Frame Structure (see \ref{})}
-\label{fig:frames}
+\caption{IO API Data Frames for Waspmote and Gateway (see \ref{frames1})}
+\label{fig:OwnProtocol}
 \end{figure}
