--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,3 +1,11 @@
+@ARTICLE{BW,
+	TITLE = "21 ideas for the 21st century",
+	JOURNAL = "Business Week",
+	PAGES = "77-167",
+	VOLUME = "Aug. 30",
+	YEAR = "1999"
+}
+
 @MANUAL{PRO,
       TITLE = "Waspmote (v1.1) vs Waspmote PRO (v1.2)",
       ORGANIZATION = "Libelium Comunicaciones Distribuidas S.L.",
@@ -25,6 +33,13 @@
 	JOURNAL = "Battery University",
 	NOTE = "\url{http://batteryuniversity.com/learn/article/elevating_self_discharge}",
 	YEAR = "2013"
+}
+
+@MANUAL{DYNAMIC,
+      TITLE = "Dynamic C: An Introduction to ZigBee",
+      ORGANIZATION = "Digi International Inc.",
+	  YEAR = "2008",
+	  NOTE = "Available on \url{http://www.rabbit.com}",
 }
 
 @MANUAL{ID1,
@@ -146,7 +161,7 @@
 	EDITION = "First"
 }
 
-@ARTICLE{ID16,
+@ARTICLE{50,
 	TITLE = "50 Sensor applications for a Smarter World. Get Inspired!",
 	AUTHOR = "Libelium",
 	NOTE = "\url{http://www.libelium.com/50_sensor_applications/}",
