--- a/ThesisWSN.tex
+++ b/ThesisWSN.tex
@@ -84,9 +84,9 @@
 \title{Design of a Wireless Sensor Networking Test-Bed}
 
 \author{Bjorn Deraeve\supit{*}, Roel Storms\supit{*} \\ \vspace*{0.25cm}
-            \small{\supit{*}Master student $<$EA-ICT focus Internet Computing,$>$, GROUP T - Leuven Engineering College, Vesaliusstraat 13, 3000 Leuven \\ \vspace*{1.5cm}
+            \small{\supit{*}Master student $<$EA-ICT focus Internet Computing,$>$, GROUP T - Leuven Engineering College, Andreas-Vesaliusstraat 13, 3000 Leuven \\ \vspace*{1.5cm}
             Supervisor: Dr. Luc Vandeurzen \\            
-            Unit Information, GROUP T - Leuven Engineering College, Vesaliusstraat 13, 3000 Leuven, \href{mailto:luc.vandeurzen@groept.be}{luc.vandeurzen@groept.be}} \\ \vspace*{1em}
+            Unit Information, GROUP T - Leuven Engineering College, Andreas-Vesaliusstraat 13, 3000 Leuven, \href{mailto:luc.vandeurzen@groept.be}{luc.vandeurzen@groept.be}} \\ \vspace*{1em}
             Co-supervisor(s): $<$Names$>$\\
             $<$Department,$\ldots>$, $<$Company$>$, $<$Company Address$>$\\
             }
@@ -175,11 +175,12 @@
 \onecolumn
 \appendix
 \input{./Appendices/AppendixA}
-%\input{./Appendices/AppendixG}
+
 %\pagebreak
 \input{./Appendices/AppendixB}
 \input{./Appendices/AppendixC}
 \input{./Appendices/AppendixD}
 \input{./Appendices/AppendixE}
 \input{./Appendices/AppendixF}
+\input{./Appendices/AppendixG}
 \end{document}
